test/libsolidity/syntaxTests/nameAndTypeResolution/127_enum_invalid_direct_member_access.sol
contract test {
    enum ActionChoices { GoLeft, GoRight, GoStraight, Sit }
    constructor() {
        choices = Sit;
    }
    ActionChoices choices;
}
// ----
// DeclarationError 7576: (114-117): Undeclared identifier.
